--- a/Project3-report/Latex template.tex
+++ b/Project3-report/Latex template.tex
@@ -98,7 +98,7 @@ implement the two query types delete and update.
 %Flushpages was implementing using Flushpage as they're almost %doing the same and this reduces the amount of dubplicate code. 
 
 \section{Implementation}
-TODO
+The files \textsf{Select.java}, \textsf{Update.java} and \textsf{Delete.java} were implemented to provide the wanted functionality.
 
 \subsection{Select}
 Select has implemented four functions, one of which is the executer \textsf{execute()} and the constructor \textsf{Select(AST\_Select)} that takes the AST\_Select-object as input. First it is checked whether or not the current tree is an EXPLAIN statement. Then it starts running \textsf{parser(AST\_Select)}.
@@ -106,9 +106,16 @@ Select has implemented four functions, one of which is the executer \textsf{exec
 \textsf{parser(AST\_Select)} rationalizes the statement, so it makes sense for a computer. It does so, by saving the predicates, tables and columns separately. It then combines(joins) all the tables into one large schema. Afterwards it is checked whether the all the coloumns are present in the new schema. If they are not, the \textsf{QueryCheck.columnExists(...)} will throw an exception.\\
 Very similar is the last part of the function, where \textsf{QueryCheck.predicates} will also throw an exception, if the predicate is illegal and doesn't fit with the tables and columns.
 \\
-The \textsf{optimizer()} function 
+The \textsf{optimizer()} TODO
+\\
+\textsf{execute()} simply executes based on the \textsf{isExplain} boolean. If \textsf{isExplain} is false, it tells how many rows were affected.
+
 \subsection{delete}
-The first thing that happens when the delete 
+The \textsf{Delete()} function deletes records based on the \textsf{AST\_Delete} object. It starts by getting the table that has to be deleted and then checks that it exists. It also gets the predicates, and checks that these are valid. If any of these is illegal, it throws a \textsf{QueryException}.
+\\
+\textsf{execute()} is where the actual deletion takes place. Here it gets the tables and starts deleting records based on the predicates.
+
+TODO
 
 \subsection{update}
 
