--- a/Project3-report/Latex template.tex
+++ b/Project3-report/Latex template.tex
@@ -75,7 +75,7 @@
 \section{Overall Status}
 The group managed to complete the tasks and therefore the project is considered complete, however, due to human error we thought the deadline was at 23:30 and not at 12:00, so we agreed with Yongluan ZHOU to upload what we had at 12 and email the rest within the day.
 \section{Division of Labor}
-The group worked on the project either sitting together at the university or at home remotely working together and splitting tasks when possible. A lot of the time was spent understanding how to implement a solution. Especially Sort and Merge-Join was not very straight forward. The work was very evenly divided - both when writing the code, but also when writing the report.
+The group worked on the project either sitting together at the university or at home remotely working together and splitting tasks when possible. A lot of the time was spent understanding how to implement a solution. However, due to several other group projects going on simultaneously, Mark ended up doing most of the implementation in this project.
 \section{Specification}
 In the third assignment of the course we are tasked with implementing a basic query optimizer for select and 2 other elective assignments.\\
 
