--- a/Project3-report/Latex template.tex
+++ b/Project3-report/Latex template.tex
@@ -79,7 +79,7 @@ The group worked on the project either sitting together at the university or at 
 \section{Specification}
 In the third assignment of the course we are tasked with implementing a basic query optimizer for select and 2 other elective assignments.\\
 
-For the elective assignment i choose to implement update and delete and \textbf{Write something here}
+For the elective assignment i choose to implement update and delete and Pushing down predicates \\
 
 
 \subsection{Select}
@@ -103,10 +103,12 @@ The files \textsf{Select.java}, \textsf{Update.java} and \textsf{Delete.java} we
 
 \subsection{Select.java}
 Select has implemented four functions, one of which is the executer \textsf{execute()} and the constructor \textsf{Select(AST\_Select)} that takes the AST\_Select-object as input. First it is checked whether or not the current tree is an EXPLAIN statement. Then it starts running \textsf{parser(AST\_Select)}.
+\vspace{5mm}
 \\
-\textsf{parser(AST\_Select)} rationalizes the statement, so it makes sense for a computer. It does so, by saving the predicates, tables and columns separately. It then combines(joins) all the tables into one large schema. Afterwards it is checked whether the all the coloumns are present in the new schema. If they are not, the \textsf{QueryCheck.columnExists(...)} will throw an exception.\\
+\textsf{parser(AST\_Select)} rationalizes the statement, so it makes sense for a computer. It does so, by saving the predicates, tables and columns separately. It then combines(joins) all the tables into one large schema. Afterwards it is checked whether the all the coloumns are present in the new schema. If they are not, the \textsf{QueryCheck.columnExists(...)} will throw an exception.\\ \vspace{5mm)
 Very similar is the last part of the function, where \textsf{QueryCheck.predicates} will also throw an exception, if the predicate is illegal and doesn't fit with the tables and columns.
 \\
+\vspace{5mm}
 The \textsf{optimizer()} What happens in the optimizer is that the Tree is optimized so that it performs as few operations as possible
 \\
 \textsf{execute()} simply executes based on the \textsf{isExplain} boolean. If \textsf{isExplain} is false, it tells how many rows were affected.
@@ -123,7 +125,7 @@ The update itself happends in the \textsf{execute()}  Here it gets the tables an
 
 
 %lstinputlisting[firstnumber=111,firstline=111,lastline=120,frame=single]{../DM556-project2/relop/MergeJoin.java}
-
+qfqfqfasqfqfqfqfadqrqrqrqrqfqfqfasdqrqrqrqrqfqfqfqfaqfqfqfas
 \subsection{Testing}
 
 \subsection{Select}
